dapr/java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app
  labels:
    app: java-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "java-app"
        dapr.io/app-port: "80"
        dapr.io/config: "tracing"
    spec:
      containers:
      - name: java-app
        image: java-app:latest
        ports:
        - containerPort: 80
        imagePullPolicy: Never
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
